Move from LuaJ to a Lua Parser (#426)
* initial lua parser implementation

* refine parser grammar

* Move base loader to use new lua parser

* Add BaseTemplateLoaderTest

* Convert ScenarioImporter

* Add ScenarioImporterTest

* Convert TemplateNormalizer

* Convert SaveImporter

* Add test for SaveImporter

* Remove luaj